--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "font-awesome": "^4.7.0",
+    "powerglitch": "^2.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-powerglitch": "^1.1.0",
     "react-router-dom": "^7.11.0",
     "three": "^0.182.0"
   },
