--- a/wangara/package.json
+++ b/wangara/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/lora": "^5.2.8",
+    "@fontsource-variable/roboto-mono": "^5.2.8",
+    "@fontsource-variable/ruda": "^5.2.8",
+    "@fontsource/source-serif-pro": "^5.2.5",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
